--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,6 +81,7 @@ table {
 }
 
 img {
+    max-width: 100%;
     display: block;
     margin: 0 0 33px;
     -webkit-user-select: none;
@@ -125,7 +126,7 @@ body.pushmenu-push-toleft {
     position: absolute;
     top: 0px;
     width: 100%;
-    z-index: 100;
+    z-index: 151;
 }
 
 .desktop.remove-scroll {
@@ -182,6 +183,77 @@ body {
     max-width: 1220px;
     margin: auto;
     padding: 0 40px
+}
+
+.container-content {
+    max-width: 1740px;
+}
+
+.row {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+.d-flex {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+}
+
+.flex-wrap {
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+.align-items-center {
+    -moz-align-items: center;
+    -ms-align-items: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.align-items-start {
+    -moz-align-items: flex-start;
+    -ms-align-items: flex-start;
+    -webkit-align-items: flex-start;
+    align-items: flex-start;
+}
+
+.align-items-end {
+    -moz-align-items: flex-end;
+    -ms-align-items: flex-end;
+    -webkit-align-items: flex-end;
+    align-items: flex-end;
+}
+
+.justify-content-start {
+    -moz-justify-content: flex-start;
+    -ms-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+}
+
+.justify-content-end {
+    -moz-justify-content: flex-end;
+    -ms-justify-content: flex-end;
+    -webkit-justify-content: flex-end;
+    justify-content: flex-end;
+}
+
+.justify-content-center {
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
 }
 
 .title-1 {
@@ -562,34 +634,24 @@ button {
     position: relative
 }
 
-.heart-button:after, .heart-button:before {
+.heart-button:before, .cart-button:before {
     content: "";
     width: 19px;
     height: 18px;
     position: absolute;
-    top: 0;
-    left: 0;
+    /* top: 0;
+    left: 0; */
     -webkit-transition: .3s ease-out;
     -ms-transition: .3s ease-out;
     transition: .3s ease-out
 }
 
 .heart-button:before {
-    background: url(../img/svg/heart.svg) 0 0/100% 100% no-repeat
+    background: url(../img/svg/heart__white.svg) 0 0/100% 100% no-repeat
 }
 
-.heart-button:after {
-    opacity: 0;
-    z-index: 1;
-    background: url(../img/svg/heart__red.svg) 0 0/100% 100% no-repeat
-}
-
-.heart-button.active:before {
-    opacity: 0
-}
-
-.heart-button.active:after {
-    opacity: 1
+.cart-button:before {
+    background: url(../img/svg/shopping-bag_white.svg) 0 0/100% 100% no-repeat
 }
 
 .next-button, .prev-button {
@@ -1011,6 +1073,7 @@ button {
     left: 0;
     z-index: 150;
     background: #fff;
+    border-bottom: 1px solid #eee;
 }
 
 .header.scrolled {
@@ -1026,7 +1089,7 @@ button {
 }
 
 .header__cols {
-    margin: 0 -20px;
+    /* margin: 0 -20px; */
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -2857,6 +2920,129 @@ a.slide-nav__link::after {
     position: relative
 }
 
+.short-item__product {
+    position: relative;
+}
+
+.short-item_button_group {
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    height: 45px;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    -webkit-align-items: center;
+    align-items: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    z-index: 2;
+}
+
+.short-item_button_group .short-item__button {
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    -ms-flex-pack: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    margin: 0 7px;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    background: #222222;
+    border-color: #222;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.short-item_button_group .short-item__button.active, .short-item_button_group .short-item__button:hover {
+    background: #ff8e8e;
+    border-color: #ff8e8e;
+}
+
+.short-item_button_group .short-item__button.heart-button {
+    -webkit-transform: translateY(10px);
+    transform: translateY(10px);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+
+.short-item_button_group .short-item__button.cart-button {
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+}
+
+.short-item:hover .short-item_button_group .short-item__button {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
+}
+
+.short-item__color-group {
+    margin-top: 10px;
+}
+
+.short-item__color-group .circle {
+    border-radius: 50%;
+    width: 14px;
+    height: 14px;
+    display: inline-block;
+    margin: 0 3px;
+    background: #707070;
+    position: relative;
+}
+
+.short-item__color-group .circle.yellow {
+    background: #ffd8b2;
+}
+
+.short-item__color-group .circle.white {
+    background: #FFF;
+    border: 1px solid #eee;
+}
+
+.short-item__color-group .circle::after {
+    position: absolute;
+    content: '';
+    left: -3px;
+    top: -3px;
+    right: -3px;
+    bottom: -3px;
+    border: 1px solid #f2dac0;
+    border-radius: 50%;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.short-item__color-group .circle.active::after {
+    opacity: 1;
+    visibility: visible;
+}
+
 .short-item__top {
     width: 100%;
     position: absolute;
@@ -2910,6 +3096,10 @@ a.slide-nav__link::after {
     width: 100%;
     height: 100%;
     object-fit: contain
+}
+
+.short-item__info {
+    text-align: center;
 }
 
 .short-item__title {
@@ -3121,6 +3311,21 @@ a.slide-nav__link::after {
 .advantage__content {
     position: relative;
     z-index: 1
+}
+
+.about-detail__info_box h4 {
+    font: 500 36px/39.6px "Eina", sans-serif;
+    letter-spacing: 0.3em;
+    margin-bottom: 35px;
+    padding-bottom: 0;
+    color: #222;
+}
+
+.about-detail__info_box p {
+    font: 400 15px/21px "Eina", sans-serif;
+    letter-spacing: 0.03em;
+    padding-bottom: 0;
+    color: #222;
 }
 
 .advantage__icon-wrap {
@@ -3374,6 +3579,7 @@ a.slide-nav__link::after {
     .short-post_small .short-post__content {
         top: 15px
     }
+
 }
 
 .inner-top {
@@ -3663,9 +3869,66 @@ a.slide-nav__link::after {
     height: 82px
 }
 
+.banner_title {
+    margin-top: 30px;
+    display: block;
+    text-align: center;
+}
+
+.about-banner {
+    position: relative;
+}
+
+.about-banner .hover-images img {
+    max-width: 100%;
+}
+
+.about-banner .banner-info {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.about-banner .banner-info .banner-info__inner {
+    background: #222;
+    padding: 34px 0;
+}
+
+.about-banner .banner-info .banner-info__inner p {
+    font: 400 15px/1.4 "Eina", sans-serif;
+    color: #777777;
+    padding-bottom: 0;
+}
+
+.about-banner .banner-info .banner-info__inner span {
+    color: #fff;
+}
+
+.about-banner .banner-info .banner-info__inner P:first-child {
+    margin-right: 77px;
+}
+
+.banner_title h3 {
+    font: 500 30px/1.1 "Eina", sans-serif;
+    margin-bottom: 52px;
+    padding-bottom: 0;
+}
+
+.about-detail.advantages.wrapper {
+    padding: 80px 0 60px;
+    margin: 20px auto 70px;
+    border-width: 1px 0;
+    border-style: solid;
+    border-color: #eee;
+}
+
+.about-detail.advantages.wrapper .advantage {
+    /* padding: 0 20px 0; */
+}
+
 .about-company {
     padding-top: 121px;
-    padding-bottom: 141px
+    padding-bottom: 50px
 }
 
 .about-company__top {
@@ -3701,7 +3964,7 @@ a.slide-nav__link::after {
 .about-company__col {
     width: 50%;
     max-width: 576px;
-    padding: 0 15px 38px;
+    padding: 0 15px 0;
     position: relative
 }
 
@@ -3737,13 +4000,13 @@ a.slide-nav__link::after {
 }
 
 .about-section {
-    padding: 0 0 0 67px;
+    padding: 0 20px 0 80px;
     position: relative;
     z-index: 1
 }
 
 .about-section__title {
-    margin: 0 0 0 -67px;
+    margin: 0 0 0 0;
     padding: 0 0 21px;
     font: 400 24px/28px "Eina", sans-serif;
     text-transform: capitalize
@@ -3871,8 +4134,8 @@ a.slide-nav__link::after {
 }
 
 .shop__left {
-    width: 294px;
-    padding: 0 52px 0 0;
+    width: 25%;
+    padding: 16px 52px 0 0;
     -webkit-flex-grow: 0;
     flex-grow: 0;
     -ms-flex-grow: 0;
@@ -3899,9 +4162,9 @@ a.slide-nav__link::after {
 }
 
 .apply-button {
-    width: 100%;
+    width: auto;
     margin: 3px 0 20px;
-    display: block
+    display: inline-block;
 }
 
 .search-form {
@@ -3972,10 +4235,9 @@ a.slide-nav__link::after {
 
 .widget__title {
     margin: 0 0 19px;
-    padding: 0 0 14px;
+    padding: 0 0 0px;
     font: 400 24px/28px "Eina", sans-serif;
     text-transform: capitalize;
-    border-bottom: 2px solid #000;
     color: #000
 }
 
@@ -4032,7 +4294,7 @@ a.slide-nav__link::after {
 }
 
 .side-nav {
-    padding: 0 20px 25px;
+    padding: 0 0 25px;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none
@@ -4099,12 +4361,35 @@ a.slide-nav__link::after {
     background: #ff8e8e
 }
 
+.side-nav__radio {
+    padding-bottom: 0;
+}
+
+.side-nav__radio li:not(:last-child) {
+    margin-bottom: 14px;
+}
+
+.side-nav__radio li::before {
+    content: '';
+}
+
+.side-nav__radio li .radio__label {
+    display: inline-block;
+}
+
+.side-nav__radio .radio__text {
+    font: 14px/16px "Eina", sans-serif;
+    color: #444;
+    cursor: pointer;
+}
+
 .range {
-    padding: 38px 0 24px
+    padding: 38px 0 24px;
+    width: 80%;
 }
 
 .checkboxes {
-    padding: 10px 20px 28px
+    padding: 10px 0 28px
 }
 
 .checkboxes .checkbox {
@@ -7370,6 +7655,7 @@ a[href^="http://maps.google.com/maps"], a[href^="https://maps.google.com/maps"] 
     border-radius: 50%
 }
 
+
 .payment {
     margin: 0 0 60px;
     padding: 30px 0 0;
@@ -9176,6 +9462,26 @@ body.compensate-for-scrollbar .header {
     .fancybox-thumbs__list a {
         max-width: calc(100% - 10px)
     }
+
+    .banner_title h3 {
+        margin-bottom: 32px;
+    }
+
+    .about-banner .banner-info .banner-info__inner p {
+        margin: 0 0 10px !important;
+        width: 100%;
+        text-align: center;
+    }
+
+    .about-banner .banner-info .banner-info__inner {
+        padding: 20px 0 0;
+    }
+
+    .about-banner .hover-images img {
+        max-width: 100%;
+        height: 310px;
+        object-fit: cover;
+    }
 }
 
 .selectize-control.plugin-drag_drop.multi>.selectize-input>div.ui-sortable-placeholder {
@@ -9568,6 +9874,10 @@ body.compensate-for-scrollbar .header {
 
     .inner-deal__image {
         margin: 0 -162px 0 -100px
+    }
+
+    .about-detail.advantages.wrapper {
+        padding: 80px 20px 60px;
     }
 }
 
@@ -9972,7 +10282,7 @@ body.compensate-for-scrollbar .header {
 
     .about-company {
         padding-top: 20px;
-        padding-bottom: 90px
+        padding-bottom: 40px
     }
 
     .inner-deal {
@@ -10686,6 +10996,22 @@ body.compensate-for-scrollbar .header {
     }
 }
 
+@media screen and (min-width: 1200px) {
+    .about-company .about-content__image_sm {
+        margin-top: 100px;
+        margin-bottom: 82px;
+    }
+
+    .about-content_sign_image {
+        margin-top: 50px;
+    }
+
+    .about-company.wrapper {
+        padding-right: 0;
+        padding-left: 0;
+    }
+}
+
 @media screen and (max-width:1024px) {
     blockquote {
         padding: 20px 0 40px 20px;
@@ -10973,7 +11299,7 @@ body.compensate-for-scrollbar .header {
 
     .about-company {
         padding-top: 10px;
-        padding-bottom: 70px
+        padding-bottom: 30px
     }
 
     .about-company__top {
@@ -10985,7 +11311,7 @@ body.compensate-for-scrollbar .header {
     }
 
     .about-company__col {
-        padding: 0 10px 32px
+        padding: 0 10px 0
     }
 
     .about-stats__vector {
@@ -10993,11 +11319,11 @@ body.compensate-for-scrollbar .header {
     }
 
     .about-section {
-        padding: 0 0 0 35px
+        padding: 0 50px 0
     }
 
     .about-section__title {
-        margin: 0 0 0 -35px
+        margin: 0 0 0 0
     }
 
     .inner-deal__right {
@@ -11366,9 +11692,9 @@ body.compensate-for-scrollbar .header {
         padding-top: 20px
     }
 
-    .header__main {
+    /* .header__main {
         padding: 37px 20px 2px
-    }
+    } */
 
     .header__cols {
         margin: 0 -10px
@@ -11884,7 +12210,7 @@ body.compensate-for-scrollbar .header {
 
     .about-company {
         padding-top: 0;
-        padding-bottom: 50px
+        padding-bottom: 20px
     }
 
     .about-company__top {
@@ -11909,7 +12235,7 @@ body.compensate-for-scrollbar .header {
     .about-company__col {
         width: 100%;
         max-width: none;
-        padding: 0 0 20px
+        padding: 0 0 0
     }
 
     .about-company__col:nth-child(1) {
@@ -13027,6 +13353,11 @@ body.compensate-for-scrollbar .header {
 }
 
 @media screen and (max-width:600px) {
+
+    .about-section {
+        padding: 0 0 0;
+    }
+
     .collection {
         width: 100%
     }
@@ -13263,6 +13594,10 @@ body.compensate-for-scrollbar .header {
 
     .deal-block__image, .short-item__image-bg {
         height: 360px
+    }
+
+    .about-detail.advantages.wrapper {
+        padding: 50px 20px 30px;
     }
 
     .advantages+.newsletter {
